--- a/package.json
+++ b/package.json
@@ -2,28 +2,23 @@
   "name": "text-editor-development",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js", 
   "scripts": {
-    "start": "webpack serve --open",
-    "build": "webpack --mode production"
+    "start": "node server/server.js", 
+    "client-install": "cd client && npm install",
+    "client-build": "cd client && npm run build", 
+    "postinstall": "npm run client-install && npm run client-build",
+    "heroku-postbuild": "npm run client-build"
   },
-  "keywords": [],
+  "engines": {
+    "node": "14.x", 
+    "npm": "6.x" 
+  },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.23.2",
-    "@babel/preset-env": "^7.23.2",
-    "babel-loader": "^9.1.3",
-    "css-loader": "^6.8.1",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.5.3",
-    "style-loader": "^3.3.3",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-pwa-manifest": "^4.3.0",
-    "workbox-webpack-plugin": "^7.0.0"
-  },
   "dependencies": {
-    "core-js": "^3.33.2"
+   
+  },
+  "devDependencies": {
   }
 }
