--- a/client/package.json
+++ b/client/package.json
@@ -1,12 +1,12 @@
 {
   "name": "JATE",
+  "version": "1.0.0",
+  "description": "Just Another Text Editor - Client",
   "scripts": {
-    "dev": "webpack-dev-server",
+    "start": "webpack serve --mode development --open",
     "build": "webpack --mode production",
-    "start": "webpack --watch"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "2U",
-  "license": "UNLICENSED",
   "devDependencies": {
     "@babel/core": "^7.15.0",
     "@babel/plugin-transform-runtime": "^7.15.0",
@@ -16,7 +16,6 @@
     "babel-loader": "^8.2.2",
     "css-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
-    "http-server": "^0.11.1",
     "style-loader": "^3.2.1",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
