--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "JATE",
+  "name": "JATE-client",
   "version": "1.0.0",
   "description": "Just Another Text Editor - Client",
   "scripts": {
@@ -26,5 +26,8 @@
   "dependencies": {
     "code-mirror-themes": "^1.0.0",
     "idb": "^6.1.2"
-  }
+  },
+  "browserslist": [
+    "defaults"
+  ]
 }
